--- a/examples/lisflood.ipynb
+++ b/examples/lisflood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2c3c4d2f",
+   "id": "52e2f7fe",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "353e84c9",
+   "id": "df68dec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b56d961",
+   "id": "aa855a37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0499038a",
+   "id": "10125d57",
    "metadata": {},
    "source": [
     "## Run lisflood class\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9601ff53",
+   "id": "8ff5018d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "27423afd",
+   "id": "08860d19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1aa8cd99",
+   "id": "ceb61a04",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3c6f452c",
+   "id": "c220553e",
    "metadata": {},
    "outputs": [
     {
@@ -136,13 +136,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e775be11",
+   "id": "2717526a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.lisflood.Lisflood at 0x2b61aaa350a0>"
+       "<ewatercycle.models.lisflood.Lisflood at 0x2b4b48470250>"
       ]
      },
      "execution_count": 7,
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c7b5daa7",
+   "id": "3ade51be",
    "metadata": {},
    "outputs": [
     {
@@ -189,14 +189,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "67caa62f",
+   "id": "ec7d05f7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 46815\n"
+      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 42559\n"
      ]
     }
    ],
@@ -208,15 +208,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "079e7423",
+   "id": "e2707fc1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/scratch/shared/ewatercycle/lisflood_20210602_111233/lisflood_setting.xml\n",
-      "/scratch/shared/ewatercycle/lisflood_20210602_111233\n"
+      "/scratch/shared/ewatercycle/lisflood_20210621_164834/lisflood_setting.xml\n",
+      "/scratch/shared/ewatercycle/lisflood_20210621_164834\n"
      ]
     },
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7758a116",
+   "id": "ebe5fdac",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "617bca0e",
+   "id": "0ae3f0da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "22266595",
+   "id": "4fb130e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4cbdc936",
+   "id": "ed424c51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9f57aed3",
+   "id": "97fdceaa",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "25c0eedd",
+   "id": "a08e63d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b90747db",
+   "id": "d159b951",
    "metadata": {},
    "outputs": [
     {
@@ -701,13 +701,13 @@
        "  * latitude   (latitude) float64 89.95 89.85 89.75 ... -59.75 -59.85 -59.95\n",
        "    time       object 1990-01-03 00:00:00\n",
        "Attributes:\n",
-       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-9f63be35-f4e4-4748-8526-49c3db0a1372' class='xr-array-in' type='checkbox' checked><label for='section-9f63be35-f4e4-4748-8526-49c3db0a1372' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-10710cc1-1b8f-45c8-b6c0-591f03514933' class='xr-array-in' type='checkbox' checked><label for='section-10710cc1-1b8f-45c8-b6c0-591f03514933' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-67e42b0d-0a44-4255-973c-2a94997da576' class='xr-section-summary-in' type='checkbox'  checked><label for='section-67e42b0d-0a44-4255-973c-2a94997da576' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-059a2f92-f19c-4555-a9fb-418b8ac09a81' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-059a2f92-f19c-4555-a9fb-418b8ac09a81' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-12a50738-aab3-420c-94aa-777978d4ad3c' class='xr-var-data-in' type='checkbox'><label for='data-12a50738-aab3-420c-94aa-777978d4ad3c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-e8a7a921-ff43-4303-9571-c9f14440714e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e8a7a921-ff43-4303-9571-c9f14440714e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-988025a3-2334-4eea-8bfa-0f98c4cc4389' class='xr-var-data-in' type='checkbox'><label for='data-988025a3-2334-4eea-8bfa-0f98c4cc4389' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-24e21598-b6e4-4cd0-a858-ffb63d97ca1d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-24e21598-b6e4-4cd0-a858-ffb63d97ca1d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-6a4c6a3f-b571-4696-a711-16fc2f93c6c9' class='xr-var-data-in' type='checkbox'><label for='data-6a4c6a3f-b571-4696-a711-16fc2f93c6c9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-147616d8-6f70-497a-b16b-cf551c34901a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-147616d8-6f70-497a-b16b-cf551c34901a' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-e001452b-12fa-4c04-8670-df2ebc7540a1' class='xr-section-summary-in' type='checkbox'  checked><label for='section-e001452b-12fa-4c04-8670-df2ebc7540a1' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-96a33734-845d-4f87-af7f-e3d7a038ef37' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-96a33734-845d-4f87-af7f-e3d7a038ef37' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-04adeab5-63fd-4547-a361-2f40106a0cfa' class='xr-var-data-in' type='checkbox'><label for='data-04adeab5-63fd-4547-a361-2f40106a0cfa' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-3d974e5e-9f41-4c97-acc1-b4987409c690' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-3d974e5e-9f41-4c97-acc1-b4987409c690' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-008a7697-0b5b-486c-9b12-eb848e3f377f' class='xr-var-data-in' type='checkbox'><label for='data-008a7697-0b5b-486c-9b12-eb848e3f377f' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-4b6f5d3c-a63c-4afe-8873-e5a3d868d1d3' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-4b6f5d3c-a63c-4afe-8873-e5a3d868d1d3' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-314da915-ce97-493f-b079-70f066e6f26c' class='xr-var-data-in' type='checkbox'><label for='data-314da915-ce97-493f-b079-70f066e6f26c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-99e08af7-f5f1-4a39-8441-cbfcc2784e1e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-99e08af7-f5f1-4a39-8441-cbfcc2784e1e' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'Discharge' (latitude: 1500, longitude: 3600)>\n",
@@ -738,13 +738,13 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "327c6dbd",
+   "id": "7d33c370",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x2b61abf2d640>"
+       "<matplotlib.collections.QuadMesh at 0x2b4b6b33cac0>"
       ]
      },
      "execution_count": 18,
@@ -774,7 +774,51 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "aba9fb98",
+   "id": "92b884c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9.10970681])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get value at coordinates\n",
+    "model.get_value_at_coords('Discharge', lon=[-71.35], lat=[42.64])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a28d9a36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1703886, 1413056]), array([-71.35,   5.65]), array([42.65, 50.75]))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# coords to indices\n",
+    "model._coords_to_indices('Discharge',  lon=[-71.35, 5.6], lat=[42.65, 50.7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9855918a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb0f4fd1",
+   "id": "675b6b06",
    "metadata": {},
    "outputs": [],
    "source": []
